--- a/index.html
+++ b/index.html
@@ -246,7 +246,6 @@
             font-size: 16px;
             line-height: 1.5;
         }
-        /* שינוי עיצוב הכפתורים בתוך ה-pop-up */
         .popup button {
             background: #a8dadc;
             color: #1d3557;
@@ -265,7 +264,6 @@
             background: #ffffff;
             transform: scale(1.05);
         }
-        /* הוספת קונטיינר לכפתורים למרכוז מושלם */
         .popup-buttons {
             display: flex;
             justify-content: center;
@@ -288,10 +286,90 @@
             background: rgba(0, 0, 0, 0.6);
             z-index: 1500;
         }
+        /* עיצוב מצב דרמטי */
+        .dramatic-card {
+            position: relative;
+            background: linear-gradient(135deg, #1d3557, #457b9d);
+            color: #ffffff;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 50px rgba(0, 0, 0, 0.5);
+            overflow: hidden;
+            max-width: 400px;
+            margin: 0 auto;
+            text-align: center;
+            animation: cardReveal 1s ease-out;
+        }
+        .dramatic-card img {
+            max-width: 80%;
+            opacity: 0;
+            transform: scale(0.8);
+            animation: imageReveal 1s ease-out 0.5s forwards;
+            border: 3px solid #a8dadc;
+            border-radius: 10px;
+        }
+        .dramatic-card .tv-name {
+            font-size: 28px;
+            font-weight: 600;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: textReveal 1s ease-out 1.5s forwards;
+            margin: 20px 0;
+        }
+        .dramatic-card .overall {
+            font-size: 48px;
+            font-weight: 700;
+            color: #f4a261;
+            opacity: 0;
+            transform: scale(0.5);
+            animation: overallReveal 1s ease-out 2.5s forwards;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 10px 20px;
+            border-radius: 10px;
+            display: inline-block;
+        }
+        @keyframes cardReveal {
+            0% { opacity: 0; transform: scale(0.9); }
+            100% { opacity: 1; transform: scale(1); }
+        }
+        @keyframes imageReveal {
+            0% { opacity: 0; transform: scale(0.8); }
+            100% { opacity: 1; transform: scale(1); }
+        }
+        @keyframes textReveal {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes overallReveal {
+            0% { opacity: 0; transform: scale(0.5); }
+            100% { opacity: 1; transform: scale(1); }
+        }
+        /* עיצוב אייקון ההגדרות */
+        #dramaticModeBtn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+            background: rgba(255, 255, 255, 0.1);
+            border: none;
+            font-size: 24px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            color: #e0e1dd;
+            transition: background 0.3s, transform 0.2s;
+        }
+        #dramaticModeBtn:hover {
+            background: rgba(255, 255, 255, 0.3);
+            transform: scale(1.1);
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <button id="dramaticModeBtn" onclick="toggleDramaticMode()" title="שנה למצב דרמטי">⚙️</button>
+
     <div class="navbar">
         <a href="#" onclick="showPage('model')" class="active">חיפוש לפי קוד דגם</a>
         <a href="#" onclick="showPage('serial')">בדיקה לפי מספר סיריאלי</a>
@@ -340,6 +418,17 @@
     <script>
         // בדיקת טעינה של הדף
         console.log("הדף נטען בהצלחה");
+
+        let dramaticMode = false;
+
+        function toggleDramaticMode() {
+            dramaticMode = !dramaticMode;
+            const btn = document.getElementById('dramaticModeBtn');
+            btn.style.background = dramaticMode ? 'rgba(69, 123, 157, 0.5)' : 'rgba(255, 255, 255, 0.1)';
+            if (document.getElementById('result').style.display === 'block') {
+                lookupModel();
+            }
+        }
 
         function showPage(pageId) {
             try {
@@ -525,7 +614,7 @@
                 loader.style.display = "block";
                 resultDiv.style.display = "none";
                 setTimeout(() => {
-                    var details = getModelDetails(model);
+                    var details = dramaticMode ? getDramaticModelDetails(model) : getModelDetails(model);
                     resultDiv.innerHTML = details;
                     resultDiv.style.display = "block";
                     loader.style.display = "none";
@@ -624,7 +713,7 @@
                 let display = tvDisplay[model[0]] || 'לא ידוע';
                 let isFrame = model.includes('LS03');
                 let isOLED = model.includes('S95') || model.includes('S90') || model.includes('S85');
-                let isNseries = /^UE\d{2}N(4[0-4]00|4500|5[0-5]00)/.test(model); // זיהוי N4000-N5500
+                let isNseries = /^UE\d{2}N(4[0-4]00|4500|5[0-5]00)/.test(model);
 
                 if (isFrame) display = 'The Frame';
                 else if (isOLED) display = 'OLED';
@@ -647,7 +736,7 @@
                 let seriesStart = yearCode ? model.indexOf(yearCode) + 1 : 4;
                 let seriesEnd = model.length > 12 ? model.length - 3 : model.length;
                 let series = isFrame ? 'LS03' : (isOLED ? model.slice(seriesStart, seriesStart + 3) : model.slice(seriesStart, seriesEnd));
-                if (isNseries) series = model.slice(4, 9); // לדוגמה: N4000, N4100, ..., N5500
+                if (isNseries) series = model.slice(4, 9);
 
                 let broadcast = (year >= 2018 && year !== 'לא ידוע') ? 'DVB-T2' : 'DVB-T1';
 
@@ -708,6 +797,46 @@
             } catch (e) {
                 console.error("שגיאה ב-getTVDetails:", e);
                 return `<div class="card">שגיאה בעיבוד הדגם: ${e.message}</div>`;
+            }
+        }
+
+        function getDramaticModelDetails(model) {
+            try {
+                let displayType = '';
+                let image = '';
+                let overallScore = Math.floor(Math.random() * (94 - 50 + 1)) + 50;
+
+                if (/^R[FSBTL]/.test(model)) {
+                    displayType = fridgeConfig[model[1]] || 'לא ידוע';
+                    image = productImages[displayType] || '';
+                } else if (/^W[WD]|^DV/.test(model)) {
+                    displayType = washerTech[model.slice(0, 2)] || 'לא ידוע';
+                    image = productImages['מכונת כביסה'] || '';
+                } else if (/^[QULPK][NEA]/.test(model)) {
+                    displayType = tvDisplay[model[0]] || 'לא ידוע';
+                    let isFrame = model.includes('LS03');
+                    let isOLED = model.includes('S95') || model.includes('S90') || model.includes('S85');
+                    let isNseries = /^UE\d{2}N(4[0-4]00|4500|5[0-5]00)/.test(model);
+                    if (isFrame) displayType = 'The Frame';
+                    else if (isOLED) displayType = 'OLED';
+                    else if (isNseries) displayType = 'N4000-N5500 Series';
+                    else if (model[0] === 'U' && yearCodes[model[4]] >= 2018) displayType = 'CRYSTAL UHD';
+                    else if (model[0] === 'U' && yearCodes[model[4]] < 2018) displayType = 'LED';
+                    image = productImages[displayType === 'LED' ? 'CRYSTAL UHD' : displayType] || '';
+                }
+
+                if (!image) {
+                    return `<div class="card">שגיאה: לא נמצאה תמונה עבור הדגם הזה במצב דרמטי.</div>`;
+                }
+
+                return `<div class="dramatic-card">
+                            <img src="${image}" alt="${displayType}">
+                            <div class="tv-name">${model} - ${displayType}</div>
+                            <div class="overall">${overallScore}</div>
+                        </div>`;
+            } catch (e) {
+                console.error("שגיאה ב-getDramaticModelDetails:", e);
+                return `<div class="card">שגיאה בעיבוד הדגם הדרמטי: ${e.message}</div>`;
             }
         }
 
